@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.00
 
+new Apache::Test function: have_min_apache_version, to require a
+minimal Apache version. [Stas]
+
 Apache::TestUtil API change:
 write_perl_script  => t_write_perl_script
 write_shell_script => t_write_shell_script 
